Clip rects assertion when hovering div with transform https://bugs.webkit.org/show_bug.cgi?id=87580

Source/WebCore:

Reviewed by Eric Seidel.

Hit testing used to use temporary clip rects in composited documents,
until r118562. Now that we cache clip rects for hit testing, we need
to clear the cache on descendant layers when a layer gains or loses
a transform.

Test: fast/layers/clip-rects-assertion.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateTransform):

LayoutTests:

Reviewed by Eric Seidel.

Test that changes transform on hover style, testing for clipRect-related
assertions.

* fast/layers/clip-rects-assertion-expected.txt: Added.
* fast/layers/clip-rects-assertion.html: Added.


Canonical link: https://commits.webkit.org/105364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118612 268f45cc-cd09-0410-ab3c-d52691b4dbfc